# kazamo

./: .gitignore  README.md  build-appimage.sh  build.sh  fbank_lfr_cmvn_feature.json  fix-appimage.sh  index.html  kazamo  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: ensure-sherpa-python.sh  prepare-sherpa-python.sh  setup-ydotoold.sh
src/: App.tsx  icons.tsx  index.css  main.tsx  themes.ts  ui.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  fbank_lfr_cmvn_feature.json  log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ipc_socket.rs  lib.rs  main.rs  paraformer.rs  recording.rs  settings.rs  transcription.rs
